--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "css-loader": "0.28.4",
     "live-server": "^1.2.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
+    "style-loader": "0.18.2",
     "validator": "8.0.0",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
