--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "live-server": "^1.2.0",
+    "node-sass": "4.5.3",
     "react": "16.0.0",
     "react-dom": "16.0.0",
+    "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
     "webpack": "3.1.0",
