install normalize.css, setup file structure for styling

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indecision-app",
+  "name": "bobcat-courses",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Miguel Hernandez",
@@ -19,6 +19,7 @@
     "css-loader": "0.28.4",
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
+    "normalize.css": "7.0.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "sass-loader": "6.0.6",
