install semantic ui js

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "sass-loader": "6.0.6",
+    "semantic-ui-react": "^0.79.0",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
     "webpack": "3.1.0",
