--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "file-loader": "^1.1.11",
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "sass-loader": "6.0.6",
+    "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.0",
     "style-loader": "0.18.2",
+    "url-loader": "^1.0.1",
     "validator": "8.0.0",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
