--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "react"
   ],
   "plugins": [
-    "transform-class-properties"
+    "transform-class-properties",
+    ["lodash", {"id": ["lodash", "semantic-ui-react"]}]
   ]
 }
