--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "^1.1.11",
     "live-server": "^1.2.0",
+    "lodash": "^4.17.5",
     "moment": "^2.22.0",
     "node-sass": "4.5.3",
     "react": "16.0.0",
@@ -34,5 +35,8 @@
     "validator": "8.0.0",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
+  },
+  "devDependencies": {
+    "babel-plugin-lodash": "^3.3.2"
   }
 }
