--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-server": "2.5.1"
   },
   "devDependencies": {
-    "babel-plugin-lodash": "^3.3.2"
+    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-transform-semantic-ui-react-imports": "^1.3.1"
   }
 }
