--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-sass": "4.5.3",
     "react": "16.0.0",
     "react-dom": "16.0.0",
+    "react-router-dom": "4.2.2",
     "sass-loader": "6.0.6",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.0",
