--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
   ],
   "plugins": [
     "transform-class-properties",
+    "transform-object-rest-spread",
     [
       "transform-semantic-ui-react-imports", {
         "convertMemberImports": true,
