--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "^1.1.11",
+    "jwt-decode": "^2.2.0",
     "live-server": "^1.2.0",
     "lodash": "^4.17.5",
     "moment": "^2.22.0",
