--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "style-loader": "0.18.2",
     "url-loader": "^1.0.1",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
   },
   "devDependencies": {
     "babel-plugin-lodash": "^3.3.2",
-    "babel-plugin-transform-semantic-ui-react-imports": "^1.3.1"
+    "babel-plugin-transform-semantic-ui-react-imports": "^1.3.1",
+    "webpack": "^3.1.0",
+    "webpack-bundle-analyzer": "^2.11.1"
   }
 }
