--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "0.28.4",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "^1.1.11",
+    "hoek": "^5.0.3",
     "jwt-decode": "^2.2.0",
     "live-server": "^1.2.0",
     "lodash": "^4.17.5",
