--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "16.0.0",
     "react-router-dom": "4.2.2",
     "react-s-alert": "^1.4.1",
+    "react-sizes": "^1.0.4",
     "sass-loader": "6.0.6",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.0",
