--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-transform-semantic-ui-react-imports": "^1.3.1",
+    "url-parse": "^1.4.3",
     "webpack": "^3.1.0",
     "webpack-bundle-analyzer": "^2.11.1"
   }
