--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "react-dom": "16.0.0",
     "react-hamburger-button": "^0.0.1",
     "react-onclickoutside": "^6.7.1",
+    "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "react-s-alert": "^1.4.1",
     "react-sizes": "^1.0.4",
+    "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.0",
