--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "react-dom": "16.0.0",
     "react-hamburger-button": "^0.0.1",
     "react-onclickoutside": "^6.7.1",
+    "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.5",
     "react-sizes": "^1.0.4",
+    "redux": "3.7.2",
     "semantic-ui-css": "2.3.1",
     "semantic-ui-react": "^0.82.3"
   },
