--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jwt-decode": "^2.2.0",
     "lodash": "4.17.5",
     "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-hamburger-button": "^0.0.1",
