--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bobcat-courses",
+  "homepage": "http://miguelhx.github.io/bobcat-courses",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,7 +26,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
+  }
 }
