--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "react-onclickoutside": "^6.7.1",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
-    "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.5",
     "react-sizes": "^1.0.4",
+    "react-toastify": "^4.4.0",
     "redux": "3.7.2",
     "semantic-ui-css": "2.3.1",
     "semantic-ui-react": "^0.82.3"
