--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "dependencies": {
     "jwt-decode": "^2.2.0",
-    "lodash": "4.17.5",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "16.0.0",
-    "react-dom": "16.0.0",
+    "react-dom": "^16.8.6",
     "react-hamburger-button": "^0.0.1",
     "react-onclickoutside": "^6.7.1",
     "react-redux": "5.0.5",
